[package]
name = "laminarmq-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
num = "0.4.2"
tokio = { version = "1.37", features=["fs", "rt", "rt-multi-thread", "io-util", "sync"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.34.0"
