[package]
name = "laminarmq-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerovec = "0.10.4"
zerovec-derive = "0.10.3"
futures = "0.3.30"
num = "0.4.2"
tokio = { version = "1.37", features=["fs", "rt", "rt-multi-thread", "io-util", "sync"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.41.0"
bytes = "1.7.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
glommio = "0.9.0"
tokio-uring = { version = "0.5.0", features = ["bytes"] }
